# PrattScript

./: CMakeLists.txt  README.md  cJSON.h  interpreter.c  interpreter_core.c  interpreter_core.h  pratt.c  pratt.h  pratt_config.h  pratt_default.c  pratt_default.h  pratt_lexer.c  pratt_lexer.h  runtime_core.h  sfc64.h  test_suite.c  vm.c  vm.h  vm_test_suite.c
.github/scripts/: build-and-test.ps1  build-and-test.sh
.github/workflows/: ci.yml
